--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -41,7 +41,7 @@ jobs:
           micromamba install --yes -n test-env -c conda-forge paraview
           python -m pip install --upgrade pip
           pip install -e . 
-          pip install sphinx sphinx_rtd_theme sphinx-autodoc-typehints
+          pip install .[docs]
 
       - name: Build documentation
         run: |
