--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -42,13 +42,13 @@ jobs:
         run: |
           micromamba install --yes -n test-env -c conda-forge paraview
           pip install --upgrade pip
-          pip install pytest
-          pip install pytest-cov
-          pip install -e .
+          pip install --upgrade nox
+          pip install .[tests]
 
       - name: Generate coverage report
         run: |
-          pytest --cov=./ --cov-report=xml:coverage.xml          
+          pytest --cov=./ --cov-report=xml:coverage.xml
+
       - name: Upload coverage to Codecov
         
         uses: codecov/codecov-action@v5
