--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,7 +132,7 @@ jobs:
         run: nox -s tests -- no-reports
 
   Regression-Test-OF:
-    name: Test-OF (${{ matrix.python-version }}, ${{ matrix.os }})
+    name: Regression-Test-OF (${{ matrix.python-version }}, ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
