Move to pyproject (#147)
* move to pyproj

* support py3.14

* rogue dep

* fix cov report folder

* deploy in nox

* remove fixformat in docs

* rename reg test

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: '3.14'
           cache: 'pip'
 
       - name: Set up micromamba
@@ -42,13 +42,13 @@ jobs:
         run: |
           micromamba install --yes -n test-env -c conda-forge paraview
           pip install --upgrade pip
-          pip install pytest
-          pip install pytest-cov
-          pip install -e .
+          pip install --upgrade nox
+          pip install .[tests]
 
       - name: Generate coverage report
         run: |
-          pytest --cov=./ --cov-report=xml:coverage.xml          
+          pytest --cov=./ --cov-report=xml:coverage.xml
+
       - name: Upload coverage to Codecov
         
         uses: codecov/codecov-action@v5
