--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -43,7 +43,7 @@ jobs:
           micromamba install --yes -n test-env -c conda-forge paraview
           pip install --upgrade pip
           pip install --upgrade nox
-          pip install .[tests]
+          pip install -e .[tests]
 
       - name: Generate coverage report
         run: |
