--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,3 +81,20 @@ Homepage = "https://github.com/NatLabRockies/BioReactorDesign"
 Documentation = "https://natlabrockies.github.io/BioReactorDesign"
 Repository = "https://github.com/NatLabRockies/BioReactorDesign"
 Issues = "https://github.com/NatLabRockies/BioReactorDesign/issues"
+
+[tool.pixi.workspace]
+channels = ["conda-forge"]
+platforms = ["osx-arm64", "linux-64", "win-64"]
+
+[tool.pixi.pypi-dependencies]
+nlr-bird = { path = ".", editable = true }
+
+[tool.pixi.environments]
+default = { solve-group = "default" }
+calibration = { features = ["calibration"], solve-group = "default" }
+dev = { features = ["dev"], solve-group = "default" }
+docs = { features = ["docs"], solve-group = "default" }
+optim = { features = ["optim"], solve-group = "default" }
+tests = { features = ["tests"], solve-group = "default" }
+
+[tool.pixi.tasks]
